loopfor.LoopFor.scala.error
Erreur de compilation :
LoopFor:2: error: '=' expected but ';' found.
while (!isOverBaggle()) {
^