loopfor.LoopFor.scala.code
var step
while (!isOverBaggle()) {
  forward()
  stepCount = stepCount+1
}
pickupBaggle()
for (i <- 1 to stepCount) {
  backward()
}
dropBaggle()